[package]
name = "custom_pricer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
futures-util = "0.3.32"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["chrono", "postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
